--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "./",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -9,8 +10,7 @@
     "react-dom": "^16.5.2",
     "react-scripts": "^2.0.4",
     "truffle-contract": "^4.0.0-next.0",
-    "web3": "^1.0.0-beta.35",
-    "webpack-cli": "^3.1.2"
+    "web3": "^1.0.0-beta.35"
   },
   "scripts": {
     "webpack_start": "webpack-dev-server --progress",
@@ -24,20 +24,6 @@
     "link-contracts:win32": "cd src && mklink \\D contracts ..\\..\\build\\contracts"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-syntax-class-properties": "^7.0.0",
-    "autoprefixer": "^9.1.5",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "html-webpack-plugin": "^3.2.0",
-    "postcss-import": "^12.0.0",
-    "postcss-loader": "^3.0.0",
-    "run-script-os": "^1.0.3",
-    "sugarss": "^2.0.0",
-    "webpack": "^4.20.2"
   },
   "browserslist": [
     ">0.2%",
